# Numlocked

./: LICENSE  README.md  readme.md  readme.md.md
.obsidian/: workspace.json
PCB/: PCB1-BoardEdgeRout.TXT  PCB1-RoundHoles.TXT  PCB1-macro.APR_LIB  PCB1.DRR  PCB1.GBO  PCB1.GBS  PCB1.GD1  PCB1.GG1  PCB1.GM  PCB1.GM1  PCB1.GPB  PCB1.GPT  PCB1.GTL  PCB1.GTO  PCB1.GTP  PCB1.GTS  PCB1.LDP  PCB1.REP  Status Report.Txt
PCB/Altium Files/: Sheet1.SchDoc  Sheet2.SchDoc
PCB/HUB-Gerber/: PCB2-BoardEdgeRout.TXT  PCB2-RoundHoles.TXT  PCB2-SlotHoles.TXT  PCB2-macro.APR_LIB  PCB2.DRR  PCB2.EXTREP  PCB2.GBL  PCB2.GBO  PCB2.GBS  PCB2.GD1  PCB2.GG1  PCB2.GM  PCB2.GM1  PCB2.GPB  PCB2.GPT  PCB2.GTL  PCB2.GTO  PCB2.GTP  PCB2.GTS  PCB2.LDP  PCB2.REP  PCB2.apr
PCB/Hub-Gerber/: PCB2-BoardEdgeRout.TXT  PCB2-RoundHoles.TXT  PCB2-SlotHoles.TXT  PCB2-macro.APR_LIB  PCB2.DRR  PCB2.EXTREP  PCB2.GBL  PCB2.GBO  PCB2.GBS  PCB2.GD1  PCB2.GG1  PCB2.GM  PCB2.GM1  PCB2.GPB  PCB2.GPT  PCB2.GTL  PCB2.GTO  PCB2.GTP  PCB2.GTS  PCB2.REP  PCB2.apr  Status Report.Txt
PCB/Keyboard-Gerber/: PCB1-SlotHoles.TXT  PCB1.EXTREP  PCB1.GBL  PCB1.GBP  PCB1.GD1  PCB1.GM  PCB1.GTO  PCB1.LDP  PCB1.apr
Revision1/: README.md
Revision1/.obsidian/: workspace.json
Revision1/PCB/: Schematic.SchDoc
Revision1/PCB/Altium Files/: PCB2.PcbDoc
Revision1/PCB/Hub-Gerber/: PCB2-BoardEdgeRout.TXT  PCB2-RoundHoles.TXT  PCB2-SlotHoles.TXT  PCB2-macro.APR_LIB  PCB2.DRR  PCB2.EXTREP  PCB2.GBL  PCB2.GBO  PCB2.GBS  PCB2.GD1  PCB2.GG1  PCB2.GM  PCB2.GM1  PCB2.GPB  PCB2.GPT  PCB2.GTL  PCB2.GTO  PCB2.GTP  PCB2.GTS  PCB2.LDP  PCB2.REP  PCB2.apr  Status Report.Txt
Revision1/PCB/Keyboard-Gerber/: PCB1-RoundHoles.TXT  PCB1-SlotHoles.TXT  PCB1-macro.APR_LIB  PCB1.DRR  PCB1.EXTREP  PCB1.GBL  PCB1.GBO  PCB1.GBP  PCB1.GBS  PCB1.GG1  PCB1.GM1  PCB1.GPB  PCB1.GPT  (+6 more)
Revision1/firmware/: CMakeLists.txt  ssd1306.c
case/: BotNumpadCase.ipt  BottomLeftCase.ipt  BottomRightCase.ipt  NumpadPlate.ipt  TopCase.ipt  TopNumpadCase.ipt  TopRightCase.ipt  numlocked_left_plate.ipt  numlocked_right_plate.ipt  readme.md
firmware/: .main.c.swp  CMakeLists.txt  README.md  bootanim.h  font.h  images.h  main.c  ssd1306.c  ssd1306.h  tusb_config.h  usb_descriptors.c  waveanim.h
hardware/: ComponentsSheet.xlsx  KiCadSetModels.py  readme.md
hardware/docs/: buildInstructions.md
pictures/Diagrams/: ShiftRegFlowchart.drawio
software/: main.py  readme.md
software/backend/: main.c  sockets.c
software/core/: process_monitor.py  usb_communication.py
software/frontend/: main.py
software/games/: gamesList.py
software/ui/: form.ui  userInterface.py
(+305 files in other folders)
